# picrom

./: mkdocs.yml  notes.txt  pdm.toml  pyproject.toml  release.py  setup_env.sh
.github/workflows/: deploy.yml  docs.yml
docs/: CONTRIBUTING.md  README.md  how-to-guides.md  theory.md  tutorials.md
docs/reference/: overview.md
scripts/: .gitignore  animate.py  dmd.py  extract_data.py  extract_data.sh  extract_turf.py  extract_turf.sh  extract_warpx.py  load_pic_data.py  test_openpmd.ipynb  tt_compress.py  turfUtils.py  view_data.ipynb  view_turf.ipynb  warpx.py
scripts/DaMAT/: ttObject.py
src/picrom/: __init__.py
